Fixed image paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                 <div class="library">
                     <div class="options">
                         <div class="lib-option nav-option">
-                            <img src="spotify_img/library_icon.png">
+                            <img src="Spotify_img/library_icon.png">
                             <a href="#">Your library</a>
                         </div>
                         <div class="icons">
@@ -740,8 +740,8 @@
             <div class="main-content">
                 <div class="sticky-nav">
                     <div class="sticky-nav-iocns">
-                        <img src="spotify_img/backward_icon.png">
-                        <img src="spotify_img/forward_icon.png" class="hide">
+                        <img src="Spotify_img/backward_icon.png">
+                        <img src="Spotify_img/forward_icon.png" class="hide">
                     </div>
                     <div class="sticky-nav-options">
                         <button class="badge nav-item hide">Explore Premium</button>
@@ -755,7 +755,7 @@
                 <h2>Recently played</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="spotify_img/card1img.jpeg" class="card-img">
+                        <img src="Spotify_img/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily dose of trending hits...</p>
                     </div>
@@ -764,27 +764,27 @@
                 <h2>Trending now near you</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="spotify_img/card2img.jpeg" class="card-img">
+                        <img src="Spotify_img/card2img.jpeg" class="card-img">
                         <p class="card-title">Mahiye Jinna Sohna</p>
                         <p class="card-info">Darshan Raval’s soulful track with heartfelt lyrics and melodies.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card3img.jpeg" class="card-img">
+                        <img src="Spotify_img/card3img.jpeg" class="card-img">
                         <p class="card-title">Mere Pass Tum Ho</p>
                         <p class="card-info">A timeless drama hit with powerful lyrics and music.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card4img.jpeg" class="card-img">
+                        <img src="Spotify_img/card4img.jpeg" class="card-img">
                         <p class="card-title">Naa Ready</p>
                         <p class="card-info">A high-energy Tamil track with powerful beats and mass vibes.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card3img.jpeg" class="card-img">
+                        <img src="Spotify_img/card3img.jpeg" class="card-img">
                         <p class="card-title">Mere Pass Tum Ho</p>
                         <p class="card-info">A timeless drama hit with powerful lyrics and music.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card4img.jpeg" class="card-img">
+                        <img src="Spotify_img/card4img.jpeg" class="card-img">
                         <p class="card-title">Naa Ready</p>
                         <p class="card-info">A high-energy Tamil track with powerful beats and mass vibes.</p>
                     </div>
@@ -793,32 +793,32 @@
                 <h2>Featured Charts</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="spotify_img/card5img.jpeg" class="card-img">
+                        <img src="Spotify_img/card5img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">The world’s most-streamed hits updated weekly.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card6img.jpeg" class="card-img">
+                        <img src="Spotify_img/card6img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - India</p>
                         <p class="card-info">India’s most-streamed hits updated weekly.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card1img.jpeg" class="card-img">
+                        <img src="Spotify_img/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updtes of the most played...</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card1img.jpeg" class="card-img">
+                        <img src="Spotify_img/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Top 50 Trending songs right now.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card1img.jpeg" class="card-img">
+                        <img src="Spotify_img/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Top 50 Trending Playlists right now.</p>
                     </div>
                     <div class="card">
-                        <img src="spotify_img/card1img.jpeg" class="card-img">
+                        <img src="Spotify_img/card1img.jpeg" class="card-img">
                         <p class="card-title">Top 50 - Global</p>
                         <p class="card-info">Your daily updtes of the most played...</p>
                     </div>
@@ -832,7 +832,7 @@
             <div class="music-player">
                 <div class="album">
                     <div class="song-player">
-                        <img src="spotify_img/album_picture.jpeg" class="playing-song">
+                        <img src="Spotify_img/album_picture.jpeg" class="playing-song">
                         <div class="song">
                             <p class="line-1">Shona</p>
                             <p class="line-2">Daivd Kushar</p>
@@ -848,11 +848,11 @@
 
                 <div class="player">
                     <div class="player-controls">
-                        <img src="spotify_img/player_icon1.png" class="player-control-icon">
-                        <img src="spotify_img/player_icon2.png" class="player-control-icon">
-                        <img src="spotify_img/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
-                        <img src="spotify_img/player_icon4.png" class="player-control-icon">
-                        <img src="spotify_img/player_icon5.png" class="player-control-icon">
+                        <img src="Spotify_img/player_icon1.png" class="player-control-icon">
+                        <img src="Spotify_img/player_icon2.png" class="player-control-icon">
+                        <img src="Spotify_img/player_icon3.png" class="player-control-icon" style="opacity: 1; height: 2rem;">
+                        <img src="Spotify_img/player_icon4.png" class="player-control-icon">
+                        <img src="Spotify_img/player_icon5.png" class="player-control-icon">
                     </div>
                     <div class="playback-bar">
                         <span class="curr-time">00:00</span>
